# GENIE_ML4SCI

./: .gitignore  README.md  RUN_SUMMARY.md  pyproject.toml  requirements.txt
configs/: latent_diffusion.yaml  latent_diffusion_fixed.yaml  latent_diffusion_tuned.yaml
outputs/: autoencoder_losses.csv  gnn_losses.csv
outputs/evaluation/: autoencoder_metrics.json  diffusion_metrics_mean.json  gnn_metrics.json
outputs_tuned/: autoencoder_losses.csv  diffusion_latent_stats_mean.csv  diffusion_losses_mean.csv
outputs_tuned/evaluation/: autoencoder_metrics.json  diffusion_metrics_mean.json
src/gnn/: data.py  evaluate.py  model.py  train.py
src/ldm/: __init__.py  analyze_results.py  config.py  data.py  evaluate_autoencoder.py  evaluate_diffusion.py  metrics.py  run_all.py  sample.py  train_autoencoder.py  train_diffusion.py  visualize.py
src/ldm/models/: __init__.py  autoencoder.py  ldm.py  scheduler.py  unet.py
